welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:2: error: not found: value i
	if (nums(i) == lookingFor()) {
                 ^indexOfValue:3: error: not found: value lookingFor
		return lookingFor()
                       ^