welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,value:Int): Int = {
	if (nums(i) == lookingFor()) {
		return lookingFor()
	} else {
		return -1
	}
}
